# fastevo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: argparse.hpp.2F6B95CFDCBB06B3.idx  fevo_manager.hpp.980F6F27B8BCDB16.idx  main.cpp.D994DE10740F964E.idx
include/: common.hpp
include/APE/: ape.hpp
include/data_loader/: loader.hpp
include/manager/: fevo_manager.hpp
